new computer test

--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
             </div>
         <footer>
             <div class="center-align black-text footer-name">
-                <span>© 2018 Copyright Brenton Jenkins :)</span>
+                <span>© 2018 Copyright Brenton Jenkins</span>
             </div>
         </footer>
 
