misc changes from Jenna

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         </a>
                     </li>
                     <li class="right">
-                        <a href="https://drive.google.com/open?id=1Yvy8oRnYroeQNFiouJQb53S03dYN0QmE" target="_blank">
+                        <a href="https://drive.google.com/open?id=1evFHOGgnmlrCb3VDeOzwofh4npZyYmzg" target="_blank">
                             <img src=./public/images/resume.png class="social-link-mini" alt="Brenton's Resume">
                         </a>
                     </li>
@@ -94,7 +94,7 @@
                     <!-- <object class="my-logo" type="image/svg+xml" data="./public/images/test.svg">
                     </object> -->
                 </p>
-                
+
             </div>
         </div>
     </div>
@@ -223,12 +223,6 @@
             <div class="col l8 offset-l2 m8 offset-m2 s10 offset-s1 paper-box work-box">
                 <h5 class="black-text center-align card-title">Work</h5>
                 <hr>
-                <div class="card-paragraph">
-                    The following are websites and apps that I’ve been working on. I am continually optimizing and improving them for user experience,
-                    device responsiveness, and better functionality. I will also be adding new projects over time. Please
-                    be patient with loading times as projects are hosted on Heroku and if an application is unused for a
-                    period of time, they are unloaded from server memory.
-                </div>
                 <div class="row">
                     <div class="col l10 offset-l1 m12 s12 project">
                         <div class="app-title">
@@ -239,9 +233,6 @@
                         </a>
                     </div>
                     <div class="col l12 m12 s12 project">
-                        <div class="app-subtitle">
-                            (Click image to load website)
-                        </div>
                         <div class="card-paragraph">
                             Frij’it is a web app to start your day. It’s a collection of customizable widgets (“magnets”) that appear on your fridge
                             (“frij”). You can choose which news, sports, and special interest articles to display. Also available
@@ -267,9 +258,6 @@
                         </a>
                     </div>
                     <div class="col l12 m12 s12 project">
-                        <div class="app-subtitle">
-                            (Click image to load website)
-                        </div>
                         <div class="card-paragraph">
                             Board Game Discovery is a web app that helps you find the game you’re looking to play. If you have a group of people coming
                             over for a game night and you want to know what new game to play, this app allows you to search
@@ -295,9 +283,6 @@
                         </a>
                     </div>
                     <div class="col l12 m12 s12 project">
-                        <div class="app-subtitle">
-                            (Click image to load website)
-                        </div>
                         <div class="card-paragraph">
                             Firefly Memory Game is a web game I created. The object is to click on each character once. Each time you click on a character,
                             all twelve characters randomly scramble their position. When you have successfully clicked on
@@ -317,9 +302,6 @@
                         </a>
                     </div>
                     <div class="col l12 m12 s12 project">
-                        <div class="app-subtitle">
-                            (Click image to load website)
-                        </div>
                         <div class="card-paragraph">
                             Vampire Companion is a fun web app, which seeks to find which character you’re most compatible with. This app provides you
                             with a survey, and based on your responses, yields your vampire companion. Vampire Companion
@@ -336,60 +318,60 @@
     <!-- Connect with Me Section -->
     <div class="connect-section" id="connect-id">
         <div class="row">
-            <div class="col l6 offset-l3 m6 offset-m3 s8 offset-s2 paper-box connect-box">
+            <div class="col l6 offset-l3 m8 offset-m2 s10 offset-s1 paper-box connect-box">
                 <h5 class="black-text center-align card-title">Connect with Me</h5>
                 <hr>
-                <ul>
-                    <li class="icon-email black-text connect-link">
-                        <a href="mailto:brentonjjenkins@gmail.com" target="_blank">
-                            <img src=./public/images/gmail.png class="social-link" alt="Brenton's Email">
-                        </a>
-                        <div class="link-title">
-                            <a href="mailto:brentonjjenkins@gmail.com" target="_blank">Email</a>
-                        </div>
-                    </li>
-                    <li class="icon-resume black-text connect-link">
-                        <a href="https://drive.google.com/open?id=1iMEFY5cSh_Zl0W9e_8KlG1qcAJvXhrMX" target="_blank">
-                            <img src=./public/images/resume.png class="social-link" alt="Brenton's Resume">
-                        </a>
-                        <div class="link-title">
-                            <a href="https://drive.google.com/open?id=1Yvy8oRnYroeQNFiouJQb53S03dYN0QmE" target="_blank">Resume</a>
-                        </div>
-                    </li>
-                    <li class="icon-linkedin black-text connect-link">
-                        <a href="https://www.linkedin.com/in/brenton-jenkins" target="_blank">
-                            <img src=./public/images/linkedin.png class="social-link" alt="Brenton's LinkedIn Page">
-                        </a>
-                        <div class="link-title">
-                            <a href="https://www.linkedin.com/in/brenton-jenkins" target="_blank">LinkedIn</a>
-                        </div>
-                    </li>
-                    <li class="icon-github black-text connect-link">
-                        <a href="https://github.com/Mondo114" target="_blank">
-                            <img src=./public/images/github.png class="social-link" alt="Brenton's GitHub Page">
-                        </a>
-                        <div class="link-title">
-                            <a href="https://github.com/Mondo114" target="_blank">GitHub</a>
-                        </div>
-                    </li>
-                    <li class="icon-aboutme black-text connect-link">
-                        <a href="https://about.me/brentonjenkins" target="_blank">
-                            <img src=./public/images/aboutme.png class="social-link" alt="Brenton's About.Me Page">
-                        </a>
-                        <div class="link-title">
-                            <a href="https://about.me/brentonjenkins" target="_blank">About.me</a>
-                        </div>
-                    </li>
-                </ul>
+                    <ul class="connect-list">
+                        <li class="icon-email black-text connect-link">
+                            <a href="mailto:brentonjjenkins@gmail.com" target="_blank">
+                                <img src=./public/images/gmail.png class="social-link" alt="Brenton's Email">
+                            </a>
+                            <div class="link-title">
+                                <a href="mailto:brentonjjenkins@gmail.com" target="_blank"></a>
+                            </div>
+                        </li>
+                        <li class="icon-resume black-text connect-link">
+                            <a href="https://drive.google.com/open?id=1evFHOGgnmlrCb3VDeOzwofh4npZyYmzg" target="_blank">
+                                <img src=./public/images/resume.png class="social-link" alt="Brenton's Resume">
+                            </a>
+                            <div class="link-title">
+                                <a href="https://drive.google.com/open?id=1Yvy8oRnYroeQNFiouJQb53S03dYN0QmE" target="_blank"></a>
+                            </div>
+                        </li>
+                        <li class="icon-linkedin black-text connect-link">
+                            <a href="https://www.linkedin.com/in/brenton-jenkins" target="_blank">
+                                <img src=./public/images/linkedin.png class="social-link" alt="Brenton's LinkedIn Page">
+                            </a>
+                            <div class="link-title">
+                                <a href="https://www.linkedin.com/in/brenton-jenkins" target="_blank"></a>
+                            </div>
+                        </li>
+                        <li class="icon-github black-text connect-link">
+                            <a href="https://github.com/Mondo114" target="_blank">
+                                <img src=./public/images/github.png class="social-link" alt="Brenton's GitHub Page">
+                            </a>
+                            <div class="link-title">
+                                <a href="https://github.com/Mondo114" target="_blank"></a>
+                            </div>
+                        </li>
+                        <li class="icon-aboutme black-text connect-link">
+                            <a href="https://about.me/brentonjenkins" target="_blank">
+                                <img src=./public/images/aboutme.png class="social-link" alt="Brenton's About.Me Page">
+                            </a>
+                            <div class="link-title">
+                                <a href="https://about.me/brentonjenkins" target="_blank"></a>
+                            </div>
+                        </li>
+                    </ul>
             </div>
         </div>
-            <div class="jelly-div">
-                <img src=./public/images/jellyfish-logo.png class="logo-2" alt="Jellyfish Logo">
-            </div>
-        <footer>
-            <div class="center-align black-text footer-name">
-                <span>© 2018 Copyright Brenton Jenkins</span>
-            </div>
+        
+        <!-- <div class="jelly-div">
+            <img src=./public/images/jellyfish-logo.png class="logo-2" alt="Jellyfish Logo">
+        </div> -->
+
+        <footer class="center-align black-text footer-name">
+            <span>© 2018 Copyright Brenton Jenkins</span>
         </footer>
 
         <!--JQuery-->
