made changes to logo

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 </head>
 
-<body>
+<body class="site">
 
     <!-- Navbar Section -->
     <div class="navbar-fixed" id="navbar-top">
@@ -100,7 +100,7 @@
     </div>
 
     <!-- About Section -->
-    <div class="" id="about-connect">
+    <div class="site-content about-section" id="about-connect">
         <div class="row about-section">
             <div class="col l5 offset-l1 m10 offset-m1 s10 offset-s1 paper-box about-box">
                 <h5 class="black-text card-title">About Me</h5>
@@ -366,9 +366,9 @@
             </div>
         </div>
         
-        <!-- <div class="jelly-div">
+        <div class="jelly-div">
             <img src=./public/images/jellyfish-logo.png class="logo-2" alt="Jellyfish Logo">
-        </div> -->
+        </div>
 
         <footer class="center-align black-text footer-name">
             <span>© 2018 Copyright Brenton Jenkins</span>
