--- a/index.html
+++ b/index.html
@@ -99,6 +99,10 @@
         </div>
     </div>
 
+    <div class="featured-image">
+        <img src=./public/images/portfolio-website-screenshot.png alt="Website Screenshot">
+    </div>
+
     <!-- About Section -->
     <div class="site-content about-section" id="about-connect">
         <div class="row about-section">
