--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
     <!-- Import Animate.css -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 
+    <!-- Change Default Featured Content/Meta Tags -->
+    <meta property="og:title" content="Brenton Jenkins Portfolio">
+    <meta property="og:image" content="./public/images/portfolio-website-screenshot.png">
+    <meta property="og:description" content="Take a look at my Portfolio Website!">
+    <meta property="og:url" content="https://brenton-jenkins.com/">
+
     <title>Brenton Jenkins Portfolio</title>
 
 </head>
@@ -97,10 +103,6 @@
 
             </div>
         </div>
-    </div>
-
-    <div class="featured-image">
-        <img src=./public/images/portfolio-website-screenshot.png alt="Website Screenshot">
     </div>
 
     <!-- About Section -->
