updated meta data/meta tags

--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
 
     <meta charset="utf-8" />
 
-    <!--Optimize for mobile-->
+    <!--Optimize viewport for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta name="keywords" content="brenton jenkins, brenton, web, website, websites, web design, design, responsive, mobile, mobile design, development, responsive development, web development, unique, fun, developer, affordable, small business, personal, blog, portfolio">
+    <!-- SEO Keywords -->
+    <meta name="keywords" content="brenton jenkins, brenton, web, website, websites, web design, design, responsive, mobile, mobile design, development, responsive development, web developer, web development, unique, fun, developer, affordable, small business, personal, portfolio">
+
+    <!-- Website Description for browsers -->
+    <meta name="description" content="Check out my Portfolio Website for Web Development!">
 
     <!--Import Google Fonts-->
     <link href="https://fonts.googleapis.com/css?family=Antic|Cagliostro|Raleway" rel="stylesheet">
