updated meta data/meta tags

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <!-- Website Description for browsers -->
     <meta name="description" content="Check out my Portfolio Website for Web Development!">
 
+    <!-- Website Author -->
+    <meta name="author" content="Brenton Jenkins">
+
     <!--Import Google Fonts-->
     <link href="https://fonts.googleapis.com/css?family=Antic|Cagliostro|Raleway" rel="stylesheet">
 
