misc minor changes

--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
 <body class="site">
 
     <!-- Navbar Section -->
-    <div class="navbar-fixed" id="navbar-top">
+    <div class="navbar-fixed" id="home-connect">
         <nav class="transparent z-depth-0">
             <div class="nav-wrapper">
                 <ul id="nav-mobile" class="hide-on-sm-and-down">
                     <li>
-                        <a class="link-item home-link waves-effect waves-purple" href="#navbar-top">Home</a>
+                        <a class="link-item home-link waves-effect waves-purple" href="#home-connect">Home</a>
                     </li>
                     <li>
                         <a class="link-item about-link waves-effect waves-purple" href="#about-connect">About</a>
@@ -65,7 +65,7 @@
                         <a class="link-item work-link waves-effect waves-purple" href="#work-connect">Work</a>
                     </li>
                     <li>
-                        <a class="link-item contact-link waves-effect waves-purple" href="#connect-id">Contact</a>
+                        <a class="link-item contact-link waves-effect waves-purple" href="#contact-connect">Contact</a>
                     </li>
                 </ul>
                 <ul id="nav-mobile" class="hide-on-sm-and-down">
@@ -329,7 +329,7 @@
     </div>
 
     <!-- Connect with Me Section -->
-    <div class="connect-section" id="connect-id">
+    <div class="connect-section" id="contact-connect">
         <div class="row">
             <div class="col l6 offset-l3 m8 offset-m2 s10 offset-s1 paper-box connect-box">
                 <h5 class="black-text center-align card-title">Connect with Me</h5>
