tons of progress

--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
     <div class="row" id="about-connect">
         <div class="paper-box about-box">
             <h5 class="card-title">About Me</h5>
+            <img src=./public/images/brenton.jpg class="self-photo" alt="Brenton Himself">
             <div class="separation">
             </div>
             <div class="writing-section">
@@ -124,11 +125,13 @@
                     industry has cultivated my comprehensive approach to problem solving. It has provided me with an aptitude
                     for understanding the needs and requirements of clients.
                 </div>
+
             </div>
         </div>
-        <div class="paper-box photo-box">
-            <!-- <img src=./public/images/brenton.jpg class="self-photo" alt="Brenton Himself"> -->
-        </div>
+    </div>
+
+    <!-- Photo Section 1 -->
+    <div class="photo-section-1">
     </div>
 
     <!-- Skills Section -->
@@ -224,14 +227,18 @@
         </div>
     </div>
 
+    <!-- Photo Section 2 -->
+    <div class="photo-section-2">
+    </div>
+
     <!-- Work Section -->
     <div class="row" id="work-connect">
-        <div class="col l8 offset-l2 m8 offset-m2 s10 offset-s1 paper-box work-box">
+        <div class="paper-box work-box">
             <h5 class="center-align card-title">Work</h5>
             <div class="separation">
             </div>
             <div class="row">
-                <div class="col l10 offset-l1 m12 s12 project">
+                <div class="col l6 offset-l3 m12 s12 project">
                     <div class="app-title">
                         Frij'it
                     </div>
@@ -241,7 +248,7 @@
                 </div>
                 <div class="col l12 m12 s12 project">
                     <div class="writing-section">
-                        <div class="card-paragraph">
+                        <div class="work-card-paragraph">
                             Frij’it is a web app to start your day. It’s a collection of customizable widgets (“magnets”) that appear on your fridge
                             (“frij”). You can choose which news, sports, and special interest articles to display. Also available
                             are widgets for stocks, weather, and the time. Ideally there would be dozens of widgets with
@@ -257,7 +264,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col l10 offset-l1 m12 s12 project">
+                <div class="col l6 offset-l3 m12 s12 project">
                     <div class="app-title">
                         Board Game Discovery
                     </div>
@@ -267,7 +274,7 @@
                 </div>
                 <div class="col l12 m12 s12 project">
                     <div class="writing-section">
-                        <div class="card-paragraph">
+                        <div class="work-card-paragraph">
                             Board Game Discovery is a web app that helps you find the game you’re looking to play. If you have a group of people coming
                             over for a game night and you want to know what new game to play, this app allows you to search
                             by different attributes to help narrow it down. You may search by 1 attribute at a time. The
@@ -283,7 +290,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col l10 offset-l1 m12 s12 project">
+                <div class="col l6 offset-l3 m12 s12 project">
                     <div class="app-title">
                         Firefly Memory Game
                     </div>
@@ -293,7 +300,7 @@
                 </div>
                 <div class="col l12 m12 s12 project">
                     <div class="writing-section">
-                        <div class="card-paragraph">
+                        <div class="work-card-paragraph">
                             Firefly Memory Game is a web game I created. The object is to click on each character once. Each time you click on a character,
                             all twelve characters randomly scramble their position. When you have successfully clicked on
                             each character exactly once, you win. Firefly Memory Game was created over a period of a couple
@@ -304,7 +311,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col l10 offset-l1 m12 s12 project">
+                <div class="col l6 offset-l3 m12 s12 project">
                     <div class="app-title">
                         Vampire Companion
                     </div>
@@ -314,7 +321,7 @@
                 </div>
                 <div class="col l12 m12 s12 project">
                     <div class="writing-section">
-                        <div class="card-paragraph">
+                        <div class="work-card-paragraph">
                             Vampire Companion is a fun web app, which seeks to find which character you’re most compatible with. This app provides you
                             with a survey, and based on your responses, yields your vampire companion. Vampire Companion
                             was created over a period of a couple weeks and utilizes Node.js, my own vampire API, JSON, Express,
@@ -325,6 +332,10 @@
                 </div>
             </div>
         </div>
+    </div>
+
+    <!-- Photo Section 3 -->
+    <div class="photo-section-3">
     </div>
 
     <!-- Connect with Me Section -->
