tons more progress

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <meta property="og:url" content="https://brenton-jenkins.com/">
 
     <!--Import Google Fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Antic|Cagliostro|Raleway" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Antic|Cagliostro|Raleway|Krona+One" rel="stylesheet">
 
     <!--Import Google Icons-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -53,19 +53,19 @@
             <div class="nav-wrapper">
                 <ul id="nav-mobile" class="hide-on-sm-and-down">
                     <li>
-                        <a class="link-item home-link waves-effect waves-purple" href="#home-connect">Home</a>
+                        <a class="link-item home-link waves-effect" href="#home-connect">Home</a>
                     </li>
                     <li>
-                        <a class="link-item about-link waves-effect waves-purple" href="#about-connect">About</a>
+                        <a class="link-item about-link waves-effect" href="#about-connect">About</a>
                     </li>
                     <li>
-                        <a class="link-item work-link waves-effect waves-purple" href="#skills-connect">Skills</a>
+                        <a class="link-item work-link waves-effect" href="#skills-connect">Skills</a>
                     </li>
                     <li>
-                        <a class="link-item work-link waves-effect waves-purple" href="#work-connect">Work</a>
+                        <a class="link-item work-link waves-effect" href="#work-connect">Work</a>
                     </li>
                     <li>
-                        <a class="link-item contact-link waves-effect waves-purple" href="#contact-connect">Contact</a>
+                        <a class="link-item contact-link waves-effect" href="#contact-connect">Contact</a>
                     </li>
                 </ul>
                 <ul id="nav-mobile" class="hide-on-sm-and-down">
@@ -100,9 +100,12 @@
     </div>
 
     <!-- Banner Section -->
-    <div>
-        <div class="row banner">
-            <p class="animated lightSpeedIn" id="banner-phrase1">Brenton Jenkins, Web Developer</p>
+    <div class="banner">
+        <div class="title">
+            <div class="animated lightSpeedIn" id="banner-phrase1">Brenton Jenkins</div>
+        </div>
+        <div class="subtitle">
+            <div class="animated lightSpeedIn" id="banner-phrase2">Project Manager, Web Developer</div>
         </div>
     </div>
 
@@ -240,32 +243,6 @@
             <div class="row">
                 <div class="col l6 offset-l3 m12 s12 project">
                     <div class="app-title">
-                        Frij'it
-                    </div>
-                    <a href="https://frijit.herokuapp.com/" target="_blank">
-                        <img src=./public/images/fijit-image.png class="work-image" alt="Frij'it App">
-                    </a>
-                </div>
-                <div class="col l12 m12 s12 project">
-                    <div class="writing-section">
-                        <div class="work-card-paragraph">
-                            Frij’it is a web app to start your day. It’s a collection of customizable widgets (“magnets”) that appear on your fridge
-                            (“frij”). You can choose which news, sports, and special interest articles to display. Also available
-                            are widgets for stocks, weather, and the time. Ideally there would be dozens of widgets with
-                            plenty of customization options.
-                        </div>
-                        <div class="card-paragraph">I created the UI, set up all news-related widgets, and contributed various other parts. If the news
-                            articles don’t populate from the dropdown, it’s because the API has hit its limit of uses for
-                            the day. Frij’it was a 4-person group effort implemented in about 1 week and utilizes several
-                            APIs, Node.js, React, MongoDB, and several npm modules.
-                        </div>
-                        <a class="github-repo" href="https://github.com/Mondo114/project3-new-version" target="_blank">Frij'it GitHub Repository</a>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col l6 offset-l3 m12 s12 project">
-                    <div class="app-title">
                         Board Game Discovery
                     </div>
                     <a href="https://boardgame-discovery.herokuapp.com/" target="_blank">
@@ -286,6 +263,32 @@
                             implemented in 1 week and utilizes Node.js, jQuery, MySQL, and several npm modules.
                         </div>
                         <a class="github-repo" href="https://github.com/Mondo114/BoardGameDiscovery" target="_blank">Board Game Discovery GitHub Repository</a>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col l6 offset-l3 m12 s12 project">
+                    <div class="app-title">
+                        Frij'it
+                    </div>
+                    <a href="https://frijit.herokuapp.com/" target="_blank">
+                        <img src=./public/images/fijit-image.png class="work-image" alt="Frij'it App">
+                    </a>
+                </div>
+                <div class="col l12 m12 s12 project">
+                    <div class="writing-section">
+                        <div class="work-card-paragraph">
+                            Frij’it is a web app to start your day. It’s a collection of customizable widgets (“magnets”) that appear on your fridge
+                            (“frij”). You can choose which news, sports, and special interest articles to display. Also available
+                            are widgets for stocks, weather, and the time. Ideally there would be dozens of widgets with
+                            plenty of customization options.
+                        </div>
+                        <div class="card-paragraph">I created the UI, set up all news-related widgets, and contributed various other parts. If the news
+                            articles don’t populate from the dropdown, it’s because the API has hit its limit of uses for
+                            the day. Frij’it was a 4-person group effort implemented in about 1 week and utilizes several
+                            APIs, Node.js, React, MongoDB, and several npm modules.
+                        </div>
+                        <a class="github-repo" href="https://github.com/Mondo114/project3-new-version" target="_blank">Frij'it GitHub Repository</a>
                     </div>
                 </div>
             </div>
@@ -341,7 +344,7 @@
     <!-- Connect with Me Section -->
     <div class="connect-section" id="contact-connect">
         <div class="row paper-box connect-box">
-            <h5 class="center-align card-title">Connect with Me</h5>
+            <h5 class="center-align card-title">Contact</h5>
             <div class="separation">
             </div>
             <ul class="connect-list">
@@ -371,8 +374,12 @@
                     </a>
                 </li>
             </ul>
-            <div class="jelly-div">
-                <img src=./public/images/jellyfish-logo.png class="logo-2" alt="Jellyfish Logo">
+            <div class="jelly-div tooltip">
+                <img src=./public/images/jellyfish-logo.png class="jelly-logo" alt="Jellyfish Logo">
+                <span class="footnote">
+                    Photos I took (top to bottom):
+                    <br> Laguna Beach, &nbsp; Solvang, &nbsp; Guy W Talbot State Park, &nbsp; Redondo Beach
+                </span>
             </div>
             <div class="footer">
                 © 2018 Copyright Brenton Jenkins
