changed mini icons in navbar

--- a/index.html
+++ b/index.html
@@ -71,27 +71,27 @@
                 <ul id="nav-mobile" class="hide-on-sm-and-down">
                     <li class="right aboutme-mini">
                         <a href="https://about.me/brentonjenkins" target="_blank">
-                            <img src=./public/images/aboutme.png class="social-link-mini social-link-mini-aboutme" alt="Brenton's About.Me Page">
+                            <img src=./public/images/aboutme2.png class="social-link-mini social-link-mini-aboutme" alt="Brenton's About.Me Page">
                         </a>
                     </li>
                     <li class="right github-mini">
                         <a href="https://github.com/Mondo114" target="_blank">
-                            <img src=./public/images/github.png class="social-link-mini social-link-mini-github" alt="Brenton's GitHub Page">
+                            <img src=./public/images/github2.png class="social-link-mini social-link-mini-github" alt="Brenton's GitHub Page">
                         </a>
                     </li>
                     <li class="right linkedin-mini">
                         <a href="https://www.linkedin.com/in/brenton-jenkins" target="_blank">
-                            <img src=./public/images/linkedin.png class="social-link-mini social-link-mini-linkedin" alt="Brenton's LinkedIn Page">
+                            <img src=./public/images/linkedin3.png class="social-link-mini social-link-mini-linkedin" alt="Brenton's LinkedIn Page">
                         </a>
                     </li>
                     <li class="right resume-mini">
                         <a href="https://drive.google.com/open?id=1evFHOGgnmlrCb3VDeOzwofh4npZyYmzg" target="_blank">
-                            <img src=./public/images/resume.png class="social-link-mini social-link-mini-resume" alt="Brenton's Resume">
+                            <img src=./public/images/resume2.png class="social-link-mini social-link-mini-resume" alt="Brenton's Resume">
                         </a>
                     </li>
                     <li class="right email-mini">
                         <a href="mailto:brentonjjenkins@gmail.com" target="_blank">
-                            <img src=./public/images/gmail.png class="social-link-mini social-link-mini-email" alt="Brenton's Email">
+                            <img src=./public/images/email.png class="social-link-mini social-link-mini-email" alt="Brenton's Email">
                         </a>
                     </li>
                 </ul>
@@ -370,7 +370,7 @@
                 </li>
                 <li class="icon-aboutme connect-link">
                     <a class="github-repo" href="https://about.me/brentonjenkins" target="_blank">
-                        About Me
+                        About.me
                     </a>
                 </li>
             </ul>
