working on responsiveness

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- SEO Keywords -->
-    <meta name="keywords" content="brenton jenkins, brenton, web, website, websites, web design, design, responsive, mobile, mobile design, development, responsive development, web developer, web development, unique, fun, developer, affordable, small business, personal, portfolio">
+    <meta name="keywords" content="brenton jenkins, brenton, jenkins, product, product manager, product management, manager, management, web, website, websites, web design, design, responsive, mobile, mobile design, development, responsive development, web developer, web development, unique, fun, developer, affordable, small business, personal, portfolio">
 
     <!-- Website Description for browsers -->
     <meta name="description" content="Check out my Portfolio Website for Web Development!">
@@ -71,22 +71,22 @@
                 <ul id="nav-mobile" class="hide-on-sm-and-down">
                     <li class="right aboutme-mini">
                         <a href="https://about.me/brentonjenkins" target="_blank">
-                            <img src=./public/images/aboutme2.png class="social-link-mini social-link-mini-aboutme" alt="Brenton's About.Me Page">
+                            <img src=./public/images/aboutme.png class="social-link-mini social-link-mini-aboutme" alt="Brenton's About.Me Page">
                         </a>
                     </li>
                     <li class="right github-mini">
                         <a href="https://github.com/Mondo114" target="_blank">
-                            <img src=./public/images/github2.png class="social-link-mini social-link-mini-github" alt="Brenton's GitHub Page">
+                            <img src=./public/images/github.png class="social-link-mini social-link-mini-github" alt="Brenton's GitHub Page">
                         </a>
                     </li>
                     <li class="right linkedin-mini">
                         <a href="https://www.linkedin.com/in/brenton-jenkins" target="_blank">
-                            <img src=./public/images/linkedin2.png class="social-link-mini social-link-mini-linkedin" alt="Brenton's LinkedIn Page">
+                            <img src=./public/images/linkedin.png class="social-link-mini social-link-mini-linkedin" alt="Brenton's LinkedIn Page">
                         </a>
                     </li>
                     <li class="right resume-mini">
                         <a href="https://drive.google.com/open?id=1evFHOGgnmlrCb3VDeOzwofh4npZyYmzg" target="_blank">
-                            <img src=./public/images/resume2.png class="social-link-mini social-link-mini-resume" alt="Brenton's Resume">
+                            <img src=./public/images/resume.png class="social-link-mini social-link-mini-resume" alt="Brenton's Resume">
                         </a>
                     </li>
                     <li class="right email-mini">
