working on responsiveness

--- a/index.html
+++ b/index.html
@@ -35,9 +35,6 @@
     <!--Import my favicon-->
     <link rel="shortcut icon" type="image/png" href="./public/images/jellyfish-logo.png">
 
-    <!-- Import Animate.css -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-
     <!--Import my own css-->
     <link rel="stylesheet" type="text/css" href="./public/css/style.css">
 
@@ -103,10 +100,10 @@
     <!-- Banner Section -->
     <div class="banner">
         <div class="title">
-            <div class="animated lightSpeedIn" id="banner-phrase1">Brenton Jenkins</div>
+            <div id="banner-phrase1">Brenton Jenkins</div>
         </div>
         <div class="subtitle">
-            <div class="animated lightSpeedIn" id="banner-phrase2">Project Manager, Web Developer</div>
+            <div id="banner-phrase2">Project Manager, Web Developer</div>
         </div>
     </div>
 
@@ -129,7 +126,6 @@
                     industry has cultivated my comprehensive approach to problem solving. It has provided me with an aptitude
                     for understanding the needs and requirements of clients.
                 </div>
-
             </div>
         </div>
     </div>
