working on responsiveness

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <div class="row" id="about-connect">
         <div class="paper-box about-box">
             <h5 class="card-title">About Me</h5>
-            <img src=./public/images/brenton.jpg class="self-photo" alt="Brenton Himself">
+            <!-- <img src=./public/images/brenton.jpg class="self-photo" alt="Brenton Himself"> -->
             <div class="separation">
             </div>
             <div class="writing-section">
